fix(App): Touch scroll on mobile devices

--- a/src/components/core/App/style.css
+++ b/src/components/core/App/style.css
@@ -3,6 +3,7 @@
    * so the vtk viewers don't grow too much in
    * height when resizing. */
   height: 0;
+  -webkit-overflow-scrolling: touch;
 }
 
 /* set vuetify-specific wrapper to contain our overlay */
